--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "meuPrimeiroAppRN",
-    "slug": "meuPrimeiroAppRN",
+    "name": "marcacaodeconsultasmedicas",
+    "slug": "marcacaodeconsultasmedicas",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -21,6 +21,10 @@
         "backgroundColor": "#ffffff"
       }
     },
+    "platforms": [
+      "ios",
+      "android"
+    ],
     "web": {
       "favicon": "./assets/favicon.png"
     }
