Adicionado conteúdo da aula 28/03/2025

--- a/app.json
+++ b/app.json
@@ -23,7 +23,8 @@
     },
     "platforms": [
       "ios",
-      "android"
+      "android",
+      "web"
     ],
     "web": {
       "favicon": "./assets/favicon.png"
