--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/datetimepicker": "8.2.0",
+    "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "expo": "~52.0.46",
     "expo-status-bar": "~2.0.1",
     "formik": "^2.4.6",
     "react": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "^4.10.0",
     "styled-components": "^5.3.11",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "react-native-web": "~0.19.13",
+    "react-dom": "18.3.1",
+    "@expo/metro-runtime": "~4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
